--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 --------------------------------------------------------------------------------
 KIYOMASAフレームワーク V1.0
-2017/05/17
+2017/05/18
 AUTHUR: SAWADA HIDESHIGE
 --------------------------------------------------------------------------------
 PHPの開発を円滑に進めるために設計されたオープンソース・フレームワーク
 
 PHP(バージョン7.0以上)がインストールされているLinux(CentOS,Ubuntuなど)、Windows、
-MacOSX上で動作可能。WEBサーバはApache、nginxに対応。DBはMySQL、PostgreSQLに対応。
+MacOSX上で動作可能。WebサーバはApache、nginxに対応。DBはMySQL、PostgreSQLに対応。
 
 コーディングについてはPHPフレームワーク展示会グループによる標準規約に準ずる
 http://www.php-fig.org/
@@ -27,7 +27,8 @@ root/
 
 root/                  ルートディレクトリはプロジェクト名に変更する
 ├ conf/               設定ファイルなどを格納
-│ ├ define.php    　 プロジェクトの定義設定ファイル
+│ ├ config.php    　 プロジェクトの設定ファイル
+│ ├ *define.php   　 定義ファイル
 │ └ env.php          プロジェクトの環境設定ファイル（Gitでは更新されない）
 ├ (data/)             プロジェクトの書き出しファイルを格納
 ├ *device/            様々の便利機能を格納（変更不可）
@@ -60,7 +61,8 @@ root/                  ルートディレクトリはプロジェクト名に変
 --------------------------------------------------------------------------------
 ◆インストール手順
 
-ここではプロジェクト名を「project_x」とし、/var/www/htmlの直下にKIYOMASAをインス
+ここでは一例としてプロジェクト名を「project_x」とし、PHP,MySQL,Memcached,Webサー
+バがLinuxにインストールされているものとし、/var/www/htmlの直下にKIYOMASAをインス
 トールする手順を記載する。
 
  1. 下記サイトよりKIYOMASAをダウンロードする
@@ -73,13 +75,13 @@ root/                  ルートディレクトリはプロジェクト名に変
     //0:PHPビルトイン環境 1:開発環境 2:ステージング環境 3:本番環境
     define('ENV', 1);
 
- 4. /var/www/html/project_x/conf/define.phpをプロジェクト内容に合わせて変更する
+ 4. /var/www/html/project_x/conf/config.phpをプロジェクト内容に合わせて変更する
 
  5. /var/www/html/project_x/直下にlogsとlogs/batchのディレクトリを作成する
 
- 6. WEBサーバのWEBルートを/var/www/html/project_x/public_html/にする
+ 6. Webサーバのルートディレクトリを/var/www/html/project_x/public_html/にする
 
- 7. WEBサーバのリダイレクト設定を行う
+ 7. Webサーバのリダイレクト設定を行う
     <Apacheの場合>
     # /var/www/html/project_x/public_html/.htaccess に記述するだけで良い
     RewriteEngine On
@@ -93,12 +95,12 @@ root/                  ルートディレクトリはプロジェクト名に変
         try_files $uri /index.php?url=$uri&$args;
     }
 
- 8. ルートディレクトリ配下のオーナーをWEBサーバに一括変更する
+ 8. project_xディレクトリ配下のオーナーをWebサーバユーザに一括変更する
  
- 9. プロジェクトのURLにアクセスして「OK」と表示されれば完了
+ 9. プロジェクトのURLにアクセスして画面に「OK」と表示されれば完了
 
 --------------------------------------------------------------------------------
 ◆KIYOMASAの大きな特長
 開発環境では詳細なデバッグ情報（実行時間や実行されたSQLなど）がHTMLの末尾に付与
-されて返される。\dump()コマンドを使うとデバッグ情報枠に成型したダンプデータを表
-示させることも可能。バグを発見するためのヒントとして大いに活用して欲しい。
+されて返される。dump()コマンドを使うとデバッグ情報枠に成型したダンプデータを表示
+させることも可能。バグを発見するためのヒントとして大いに活用して欲しい。
