--- a/README
+++ b/README
@@ -14,7 +14,7 @@ http://www.php-fig.org/
 ◆ディレクトリ構造
 
 root/
-├ conf/ 
+├ core/ 
 ├ device/
 ├ extension/
 ├ logs/
@@ -26,9 +26,10 @@ root/
 ◆各ディレクトおよびファイルの説明
 
 root/                  ルートディレクトリはプロジェクト名に変更する
-├ conf/               設定ファイルなどを格納
+├ core/               フレームワークの心臓部
+│ ├ *.castle.php  　 フレームワークのコントローラ
+│ ├ *.define.php  　 定義ファイル
 │ ├ config.php    　 プロジェクトの設定ファイル
-│ ├ *define.php   　 定義ファイル
 │ └ env.php          プロジェクトの環境設定ファイル（Gitでは更新されない）
 ├ (data/)             プロジェクトの書き出しファイルを格納
 ├ *device/            様々の便利機能を格納（変更不可）
@@ -44,7 +45,7 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ ├ js/              プロジェクトのJavaScriptを格納
 │ │ └ (ajax.js)     Ajax実行ファイル
 │ ├ (.htaccess)      サーバ設定ファイル（WEBサーバがApacheの場合に限る）
-│ └ *index.php       コントローラ（最初にアクセスするファイル。変更不可）
+│ └ *index.php       最初にアクセスするファイル。変更不可
 ├ (session/)          セッションファイルを格納（Gitでは更新されない）
 ├ shells/             プロジェクトのシェルプログラムを格納
 │ └ *camp.php        シェルプログラムを実行するためのコントローラ（変更不可）
