--- a/README
+++ b/README
@@ -27,16 +27,16 @@ root/
 
 root/                  ルートディレクトリはプロジェクト名に変更する
 ├ core/               フレームワークの心臓部
-│ ├ *.castle.php  　 フレームワークのコントローラ
+│ ├ *.camp.php       シェルプログラム・コントローラ
+│ ├ *.castle.php  　 WEBプログラム・コントローラ
 │ ├ *.define.php  　 定義ファイル
+│ ├ (*.router.php)   PHPビルトインサーバを利用する場合に必要な設定ファイル
 │ ├ config.php    　 プロジェクトの設定ファイル
 │ └ env.php          プロジェクトの環境設定ファイル（Gitでは更新されない）
-├ (data/)             プロジェクトの書き出しファイルを格納
 ├ *device/            様々の便利機能を格納（変更不可）
-│ ├ (*_router.php)   PHPビルトインサーバを利用する場合に必要な設定ファイル
-│ └ *_tower.php      オートロード、ショートカットに関するファイル
+│ ├ *.tower.php      オートロード、ショートカットに関するファイル
+│ └ *.turret.php     ビュー関連、デバッグ関連のコントローラ
 ├ extension/          プロジェクトの拡張機能、共通機能などを格納
-├ (library/)          外部からダウンロードしてきたモジュールを格納
 ├ logs/               ログを格納（Gitでは更新されない）
 │ └ batch/           シェルで実行した結果ログを格納
 ├ models/             プロジェクトのプログラムファイルを格納
@@ -48,14 +48,13 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ └ *index.php       最初にアクセスするファイル。変更不可
 ├ (session/)          セッションファイルを格納（Gitでは更新されない）
 ├ shells/             プロジェクトのシェルプログラムを格納
-│ └ *camp.php        シェルプログラムを実行するためのコントローラ（変更不可）
 ├ templates/          プロジェクトのテンプレートを格納
 │ └ element/         プロジェクトの共通部分テンプレートを格納
 ├ (templates_mobile/) プロジェクトの携帯用テンプレートを格納
 └ (.gitignore)        Gitを利用する場合に必要な設定ファイル
 
   補足
-  ()で囲っているディレクトリおよびファイルはプロジェクトで必要に応じて作成する
+  ()で囲っているディレクトリおよびファイルは任意のため必要に応じて利用する
   * のついているディレクトリおよびファイルは原則として変更しない
   クラスの機能と使い方については各ファイルにコメントで詳しく記述している
 
