--- a/README
+++ b/README
@@ -50,7 +50,7 @@ root/                  ルートディレクトリはプロジェクト名に変
 ├ shells/             プロジェクトのシェルプログラムを格納
 ├ templates/          プロジェクトのテンプレートを格納
 │ ├ element/         プロジェクトの共通部分テンプレートを格納
-│ └ .debug.html      デバッグ表示用のテンプレート
+│ └ .debug.tpl       デバッグ表示用のテンプレート
 ├ (templates_mobile/) プロジェクトの携帯用テンプレートを格納
 └ (.gitignore)        Gitを利用する場合に必要な設定ファイル
 
