--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 --------------------------------------------------------------------------------
 KIYOMASAフレームワーク V1.0
-2017/05/18
+2017/05/19
 AUTHUR: SAWADA HIDESHIGE
 --------------------------------------------------------------------------------
 PHPの開発を円滑に進めるために設計されたオープンソース・フレームワーク
@@ -36,7 +36,7 @@ root/                  ルートディレクトリはプロジェクト名に変
 ├ *device/            様々の便利機能を格納（変更不可）
 │ ├ *.tower.php      オートロード、ショートカットに関するファイル
 │ └ *.turret.php     ビュー関連、デバッグ関連のコントローラ
-├ extension/          プロジェクトの拡張機能、共通機能などを格納
+├ extension/          プロジェクトの拡張クラス、インターフェースなどを格納
 ├ logs/               ログを格納（Gitでは更新されない）
 │ └ batch/           シェルで実行した結果ログを格納
 ├ models/             プロジェクトのプログラムファイルを格納
@@ -97,8 +97,10 @@ root/                  ルートディレクトリはプロジェクト名に変
     }
 
  8. project_xディレクトリ配下のオーナーをWebサーバユーザに一括変更する
- 
- 9. プロジェクトのURLにアクセスして画面に「OK」と表示されれば完了
+
+ 9. 全ファイルのYourname\Yourprojectをプロジェクトの名前空間に一括置換する
+
+10. プロジェクトのURLにアクセスして画面に「OK」と表示されれば完了
 
 --------------------------------------------------------------------------------
 ◆KIYOMASAの大きな特長
