--- a/README
+++ b/README
@@ -98,9 +98,7 @@ root/                  ルートディレクトリはプロジェクト名に変
 
  8. project_xディレクトリ配下のオーナーをWebサーバユーザに一括変更する
 
- 9. 全ファイルのYourname\Yourprojectをプロジェクトの名前空間に一括置換する
-
-10. プロジェクトのURLにアクセスして画面に「OK」と表示されれば完了
+ 9. プロジェクトのURLにアクセスして画面に「YOURSITE OK」と表示されれば完了
 
 --------------------------------------------------------------------------------
 ◆KIYOMASAの大きな特長
