--- a/README
+++ b/README
@@ -98,7 +98,9 @@ root/                  ルートディレクトリはプロジェクト名に変
 
  8. project_xディレクトリ配下のオーナーをWebサーバユーザに一括変更する
 
- 9. プロジェクトのURLにアクセスして画面に「YOURSITE OK」と表示されれば完了
+ 9. project_x/device/mem.phpのコメントの通りDBにmemcachedテーブルを作っておく
+
+10. プロジェクトのURLにアクセスして画面に「YOURSITE OK」と表示されれば完了
 
 --------------------------------------------------------------------------------
 ◆KIYOMASAの大きな特長
