--- a/README
+++ b/README
@@ -37,6 +37,8 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ ├ *.tower.php      オートロード、ショートカットに関するファイル
 │ └ *.turret.php     ビュー関連、デバッグ関連のコントローラ
 ├ extension/          プロジェクトの拡張クラス、インターフェースなどを格納
+│ ├ base_model.php   各モデルの親クラス。例外処理などを指定
+│ └ citadel.php      プロジェクトで共通で利用できるメソッド
 ├ log/                ログを格納（Gitでは更新されない）
 │ └ batch/           シェルで実行した結果ログを格納
 ├ model/              プロジェクトのプログラムファイルを格納
