--- a/README
+++ b/README
@@ -54,6 +54,7 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ ├ element/         プロジェクトの共通部分テンプレートを格納
 │ └ *.debug.tpl      デバッグ表示用のテンプレート
 ├ (template_mobile/)  プロジェクトの携帯用テンプレートを格納
+├ (.library/)         ライブラリ（ここで警告エラーが出てもスローしない）
 └ (.gitignore)        Gitを利用する場合に必要な設定ファイル
 
   補足
