--- a/README
+++ b/README
@@ -110,3 +110,9 @@ root/                  ルートディレクトリはプロジェクト名に変
 開発環境では詳細なデバッグ情報（実行時間や実行されたSQLなど）がHTMLの末尾に付与
 されて返される。dump()コマンドを使うとデバッグ情報枠に成型したダンプデータを表示
 させることも可能。バグを発見するためのヒントとして大いに活用して欲しい。
+
+--------------------------------------------------------------------------------
+◆KIYOMASAのルール
+名前空間はディレクトリに合わせる。プログラムファイルのファイル名はクラス名に合わ
+せる。ただしファイル名はunder_bar形式、クラス名はStudlyCaps形式にする。
+ディレクトリ構造と、.（ドット）で始まるファイルは原則として変更しない。
