--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 --------------------------------------------------------------------------------
 KIYOMASAフレームワーク V1.0
-2017/05/19
+2017/05/26
 AUTHUR: SAWADA HIDESHIGE
 --------------------------------------------------------------------------------
 PHPの開発を円滑に進めるために設計されたオープンソース・フレームワーク
 
-PHP(バージョン7.0以上)がインストールされているLinux(CentOS,Ubuntuなど)、Windows、
+PHP(バージョン7.1以上)がインストールされているLinux(CentOS,Ubuntuなど)、Windows、
 MacOSX上で動作可能。WebサーバはApache、nginxに対応。DBはMySQL、PostgreSQLに対応。
 
 コーディングについてはPHPフレームワーク展示会グループによる標準規約に準ずる
@@ -34,10 +34,13 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ ├ config.php    　 プロジェクトの設定ファイル
 │ └ env.php          プロジェクトの環境設定ファイル（Gitでは更新されない）
 ├ *device/            様々の便利機能を格納（変更不可）
+│ ├ *.rampart.php    フレームワーク固有のインターフェース
 │ ├ *.tower.php      オートロード、ショートカットに関するファイル
 │ └ *.turret.php     ビュー関連、デバッグ関連のコントローラ
 ├ extension/          プロジェクトの拡張クラス、インターフェースなどを格納
-│ ├ base_model.php   各モデルの親クラス。例外処理などを指定
+│ ├ base_model.php   HTML用モデルの親クラス。例外処理などを指定
+│ ├ base_shell.php   シェル用モデルの親クラス。例外処理などを指定
+│ ├ json_model.php   Ajax用モデルの親クラス。例外処理などを指定
 │ └ citadel.php      プロジェクトで共通で利用できるメソッド
 ├ log/                ログを格納（Gitでは更新されない）
 │ └ batch/           シェルで実行した結果ログを格納
@@ -54,7 +57,7 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ ├ element/         プロジェクトの共通部分テンプレートを格納
 │ └ *.debug.tpl      デバッグ表示用のテンプレート
 ├ (template_mobile/)  プロジェクトの携帯用テンプレートを格納
-├ (.library/)         ライブラリ（ここで警告エラーが出てもスローしない）
+├ (.library/)         ライブラリ（ここで警告エラーが出ても例外を投げない）
 └ (.gitignore)        Gitを利用する場合に必要な設定ファイル
 
   補足
@@ -109,10 +112,18 @@ root/                  ルートディレクトリはプロジェクト名に変
 ◆KIYOMASAの大きな特長
 開発環境では詳細なデバッグ情報（実行時間や実行されたSQLなど）がHTMLの末尾に付与
 されて返される。dump()コマンドを使うとデバッグ情報枠に成型したダンプデータを表示
-させることも可能。バグを発見するためのヒントとして大いに活用して欲しい。
+させることも可能。エラーや警告が出た場合も瞬時に教えてくれる。バグを見つけるため
+のヒントとして大いにKIYOMASAを活用して欲しい。
 
 --------------------------------------------------------------------------------
 ◆KIYOMASAのルール
 名前空間はディレクトリに合わせる。プログラムファイルのファイル名はクラス名に合わ
 せる。ただしファイル名はunder_bar形式、クラス名はStudlyCaps形式にする。
 ディレクトリ構造と、.（ドット）で始まるファイルは原則として変更しない。
+モデルの書き方については.rampartインターフェースの仕様に則る。
+
+--------------------------------------------------------------------------------
+◆KIYOMASAの名前の由来
+築城の名手・加藤清正の名にちなむ。プロジェクトのプログラムを作ることは、城を構築
+していくことに近いという思いが込められている。ファイル名やクラス名に城にちなんだ
+名前が付けられているのもこのフレームワークのユニークな特徴である。
