--- a/README
+++ b/README
@@ -34,6 +34,7 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ ├ config.php    　 プロジェクトの設定ファイル
 │ └ env.php          プロジェクトの環境設定ファイル（Gitでは更新されない）
 ├ *device/            様々の便利機能を格納（変更不可）
+│ ├ *equipment/      フレームワーク固有の便利機能
 │ ├ *.rampart.php    フレームワーク固有のインターフェース
 │ ├ *.tower.php      オートロード、ショートカットに関するファイル
 │ └ *.turret.php     ビュー関連、デバッグ関連のコントローラ
