--- a/README
+++ b/README
@@ -34,10 +34,15 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ ├ config.php    　 プロジェクトの設定ファイル
 │ └ env.php          プロジェクトの環境設定ファイル（Gitでは更新されない）
 ├ *device/            様々の便利機能を格納（変更不可）
-│ ├ *equipment/      フレームワーク固有の便利機能
+│ ├ *db/             データベースモジュール群
+│ ├ *equipment/      フレームワーク固有の便利機能を格納
 │ ├ *.rampart.php    フレームワーク固有のインターフェース
 │ ├ *.tower.php      オートロード、ショートカットに関するファイル
-│ └ *.turret.php     ビュー関連、デバッグ関連のコントローラ
+│ ├ *.turret.php     ビュー関連、デバッグ関連のコントローラ
+│ ├ *log.php         ログ保存モジュール
+│ ├ *mem.php         memcachedモジュール
+│ ├ *session.php     セッションモジュール
+│ └ *view.php        テンプレートに値を入れて表示するモジュール
 ├ extension/          プロジェクトの拡張クラス、インターフェースなどを格納
 │ ├ base_model.php   HTML用モデルの親クラス。例外処理などを指定
 │ ├ base_shell.php   シェル用モデルの親クラス。例外処理などを指定
