--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 --------------------------------------------------------------------------------
-KIYOMASAフレームワーク V1.0
-2017/05/26
+KIYOMASAフレームワーク V1.1
+2017/08/04
 AUTHUR: SAWADA HIDESHIGE
 --------------------------------------------------------------------------------
 PHPの開発を円滑に進めるために設計されたオープンソース・フレームワーク
@@ -36,12 +36,14 @@ root/                  ルートディレクトリはプロジェクト名に変
 ├ *device/            様々の便利機能を格納（変更不可）
 │ ├ *db/             データベースモジュール群
 │ ├ *equipment/      フレームワーク固有の便利機能を格納
-│ ├ *.rampart.php    フレームワーク固有のインターフェース
-│ ├ *.tower.php      オートロード、ショートカットに関するファイル
+│ ├ *.tower.php      オートロード、エラーハンドラに関するファイル
 │ ├ *.turret.php     ビュー関連、デバッグ関連のコントローラ
+│ ├ *error_info.php  エラー情報モジュール
 │ ├ *log.php         ログ保存モジュール
 │ ├ *mem.php         memcachedモジュール
+│ ├ *s.php           静的ショートカット群
 │ ├ *session.php     セッションモジュール
+│ ├ *user_ex.php     ユーザ操作による例外処理
 │ └ *view.php        テンプレートに値を入れて表示するモジュール
 ├ extension/          プロジェクトの拡張クラス、インターフェースなどを格納
 │ ├ base_model.php   HTML用モデルの親クラス。例外処理などを指定
@@ -51,6 +53,10 @@ root/                  ルートディレクトリはプロジェクト名に変
 ├ log/                ログを格納（Gitでは更新されない）
 │ └ batch/           シェルで実行した結果ログを格納
 ├ model/              プロジェクトのプログラムファイルを格納
+├ prop/               インターフェースを格納
+│ ├ ajax.php         Ajaxモデル用インターフェース
+│ ├ html.php         HTMLモデル用インターフェース
+│ └ shell.php        シェルモデル用インターフェース
 ├ public_html/        WEBルートディレクトリ
 │ ├ css/             プロジェクトのスタイルシートを格納
 │ ├ js/              プロジェクトのJavaScriptを格納
