--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 --------------------------------------------------------------------------------
 KIYOMASAフレームワーク V1.1
-2017/08/04
+2017/08/16
 AUTHUR: SAWADA HIDESHIGE
 --------------------------------------------------------------------------------
 PHPの開発を円滑に進めるために設計されたオープンソース・フレームワーク
@@ -32,7 +32,8 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ ├ *.define.php  　 定義ファイル
 │ ├ (*.router.php)   PHPビルトインサーバを利用する場合に必要な設定ファイル
 │ ├ *.tower.php      オートロード、エラーハンドラに関するファイル
-│ ├ *.turret.php     ビュー関連、デバッグ関連のコントローラ
+│ ├ *.turret.php     ビュー関連のコントローラ
+│ ├ *.wall.php       デバッグ関連のコントローラ
 │ ├ config.php    　 プロジェクトの設定ファイル
 │ └ env.php          プロジェクトの環境設定ファイル（Gitでは更新されない）
 ├ *device/            様々の便利機能を格納（変更不可）
