mod ext to base

--- a/README
+++ b/README
@@ -14,11 +14,11 @@ http://www.php-fig.org/
 ◆ディレクトリ構造
 
 root/
+├ base/
 ├ core/ 
 ├ device/
-├ extension/
+├ gate/
 ├ log/
-├ model/
 ├ public_html/
 ├ shell/
 └ template/
@@ -26,6 +26,11 @@ root/
 ◆各ディレクトおよびファイルの説明
 
 root/                  ルートディレクトリはプロジェクト名に変更する
+├ base/               プロジェクトの共通クラス、基底クラスなどを格納
+│ ├ base_model.php   HTML用モデルの基底クラス。例外処理などを指定
+│ ├ base_shell.php   シェル用モデルの基底クラス。例外処理などを指定
+│ ├ json_model.php   Ajax用モデルの基底クラス。例外処理などを指定
+│ └ citadel.php      プロジェクトで共通で利用できるメソッド
 ├ core/               フレームワークの心臓部
 │ ├ *.camp.php       シェルプログラム・コントローラ
 │ ├ *.castle.php  　 WEBプログラム・コントローラ
@@ -46,18 +51,13 @@ root/                  ルートディレクトリはプロジェクト名に変
 │ ├ *session.php     セッションモジュール
 │ ├ *user_ex.php     ユーザ操作による例外処理
 │ └ *view.php        テンプレートに値を入れて表示するモジュール
-├ extension/          プロジェクトの拡張クラス、インターフェースなどを格納
-│ ├ base_model.php   HTML用モデルの親クラス。例外処理などを指定
-│ ├ base_shell.php   シェル用モデルの親クラス。例外処理などを指定
-│ ├ json_model.php   Ajax用モデルの親クラス。例外処理などを指定
-│ └ citadel.php      プロジェクトで共通で利用できるメソッド
+├ gate/               URLより実行されるプログラムファイルを格納
 ├ log/                ログを格納（Gitでは更新されない）
 │ └ batch/           シェルで実行した結果ログを格納
-├ model/              プロジェクトのプログラムファイルを格納
 ├ prop/               インターフェースを格納
-│ ├ ajax.php         Ajaxモデル用インターフェース
-│ ├ html.php         HTMLモデル用インターフェース
-│ └ shell.php        シェルモデル用インターフェース
+│ ├ ajax.php         Ajax用インターフェース
+│ ├ html.php         HTML用インターフェース
+│ └ shell.php        シェル用インターフェース
 ├ public_html/        WEBルートディレクトリ
 │ ├ css/             プロジェクトのスタイルシートを格納
 │ ├ js/              プロジェクトのJavaScriptを格納
@@ -134,7 +134,6 @@ root/                  ルートディレクトリはプロジェクト名に変
 名前空間はディレクトリに合わせる。プログラムファイルのファイル名はクラス名に合わ
 せる。ただしファイル名はunder_bar形式、クラス名はStudlyCaps形式にする。
 ディレクトリ構造と、.（ドット）で始まるファイルは原則として変更しない。
-モデルの書き方については.rampartインターフェースの仕様に則る。
 
 --------------------------------------------------------------------------------
 ◆KIYOMASAの名前の由来
